<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/mainBackgroundColor"
            tools:context=".presentation.pages.preparegame.PrepareGameActivity">

        <com.masterschief.battleships.presentation.gameui.GamePrepareDesk
                android:id="@+id/gameDesk"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="12dp"
                app:layout_constraintBottom_toTopOf="@+id/rotate"
                app:layout_constraintDimensionRatio="w,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        <Button
                android:id="@+id/placeShipsRandomly"
                style="@style/AppTheme.PrimaryColoredButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/button_selector_positive"
                android:drawableStart="@drawable/ic_auto"
                android:text="@string/button_auto"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/button_next"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        <Button
                android:id="@+id/button_next"
                style="@style/AppTheme.PrimaryColoredButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/button_selector_positive"
                android:drawableStart="@drawable/ic_next"
                android:text="@string/button_next"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        <TextView
                android:id="@+id/textView_prepareUp"
                style="@style/AppTheme.Text.Large"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/textView_prepareUp"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/labelDragAndDrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        <TextView
                android:id="@+id/labelDragAndDrop"
                style="@style/AppTheme.Text.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/textView_prepareDown"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/gameDesk"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_back" />

        <TextView
                android:id="@+id/rotate"
                style="@style/AppTheme.Text.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:drawableStart="@drawable/ic_rotate"
                android:drawablePadding="6dp"
                android:text="@string/textView_rotate"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/placeShipsRandomly"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>

</layout>