<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/mainBackgroundColor"
            tools:context=".presentation.pages.selectenemy.SelectEnemyActivity">

        <Button
                android:id="@+id/createGame"
                style="@style/AppTheme.PrimaryColoredButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/button_selector_positive"
                android:drawableStart="@drawable/icon_create"
                android:text="@string/button_createGame"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        <Button
                android:id="@+id/joinToGame"
                style="@style/AppTheme.PrimaryColoredButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/button_selector_positive"
                android:drawableStart="@drawable/icon_join"
                android:text="@string/button_joinGame"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/createGame"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        <ListView
                android:id="@+id/devices"
                style="@style/AppTheme.Text.Large"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="130dp"
                android:gravity="center_horizontal"
                app:layout_constraintBottom_toTopOf="@+id/joinToGame"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_height="320dp" />

        <TextView
                android:id="@+id/labelOpponents"
                style="@style/AppTheme.Text.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/textView_opponents"
                app:layout_constraintBottom_toTopOf="@+id/devices"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        <ImageView
                android:id="@+id/research"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_auto"
                app:layout_constraintBottom_toBottomOf="@+id/labelOpponents"
                app:layout_constraintEnd_toEndOf="@+id/devices"
                app:layout_constraintTop_toTopOf="@+id/labelOpponents" />

        <TextView
                android:id="@+id/labelExplanation"
                style="@style/AppTheme.Text.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="8dp"
                android:text="@string/textView_joinCreateInfo"
                android:textAlignment="center"
                android:typeface="monospace"
                app:layout_constraintBottom_toTopOf="@+id/joinToGame"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/waitingForOpponents"
                style="@style/AppTheme.Text.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="8dp"
                android:textAlignment="center"
                android:typeface="monospace"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/joinToGame"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:srcCompat="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/background_back_icon"
                tools:ignore="VectorDrawableCompat" />

    </android.support.constraint.ConstraintLayout>

</layout>